--- a/myweb/index.html
+++ b/myweb/index.html
@@ -9,7 +9,9 @@
     <script type="application/javascript" src="myjs.js"></script>
     <style type="text/css">
         td{
-
+            background-color: rgb(217,217,217);
+            color: red;
+            text-align: center;
         }
     </style>
 </head>
@@ -30,7 +32,7 @@
            cellpadding="0px"
            cellspacing="0px"
            style="border-collapse: collapse">
-        <tr>
+        <tr class="td">
             <td>id</td>
             <td>name</td>
             <td>age</td>
